Focus Localisation for Pravda Finalized

--- a/maddenist stuffs/localisation/english/pravda_focus_l_english.yml
+++ b/maddenist stuffs/localisation/english/pravda_focus_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
  WHILE_FOCUSING:0 "While focusing on this, there will be the following effects:\n$EFF$"
  soviet_focus:0 "Pravda National Focus"
  SOV_complete_5_year:0 "Complete the 5 Year Plan!"
@@ -93,6 +93,58 @@
  SOV_katyusha_cult_desc:0 "Out of all the players that were once in the game of chess, all that is left is Katyusha. With this glorious victory under her belt, she declares a new parade that signifies the beginning of her era – full of posters and statues that symbolizes this very event."
  SOV_power_struggle_aftermath:0 "The Aftermath of the Pravda Power Struggle"
  SOV_power_struggle_aftermath_desc:0 "Katyusha has won the Great Game in the Pravda Student Council, now what is left for the General Secretary to do is to remove any remnants of powers that the traitors still held onto."
+ SOV_purge_third_years:0 "Purging the Third Years"
+ SOV_purge_third_years_desc:0 "While Pravda stands victorious in the 62nd Sensha-do Tournament, it has become noticeable that the Third Years had been less productive in ensuring their victory over Kuromorimine. A solution to this is a purge of the current Third Year roster from the Pravda Military Club."
+ SOV_reappoint_ministers:0 "Re-Appoint Ministers"
+ SOV_reappoint_ministers_desc:0 "With the recent purges in the command structure of Pravda, new ministers must be appointed in order for Pravda's Military Club to recover."
+ SOV_expand_pioneer:0 "Expand Pioneer Club"
+ SOV_expand_pioneer_desc:0 "An expansion to the Pravda Pioneer Club would be beneficial for the Military Club to construct needed infrastructure to ease supply routes and to cross over terrain that would otherwise require more time to go over."
+ SOV_women_gunners:0 "Women Gunners"
+ SOV_women_gunners_desc:0 "While women are known in their expertise in commanding and being part of their school's Tankery Team, it isn't the same when taking into account of small-arms contests. Pravda shall not be limited to only Sensha-do, and instead expand its horizons to include firearms training to the curriculum."
+ SOV_training_priorities:0 "Training Priorities"
+ SOV_training_priorities_desc:0 "Current Tank Commanders and other Officers in Pravda has shown promise in the 62nd Sensha-do Tournament, it is time for the school to provide the best education to allow them to reach their potential."
+ SOV_form_vdv:0 "Form the Pravda Airborne Forces"
+ SOV_form_vdv_desc:0 "With aircraft becoming only recently accepted into the World Sensha-do Federation, it would be beneficial for Pravda to become the pioneer of the Paratrooper Squadron."
+ SOV_naval_inf:0 "The Pravda Marines Club"
+ SOV_naval_inf_desc:0 "Compared to the other Schools in the World Sensha-do Federation, Pravda is not known for their marine-based Infantry Club matches, this must be fixed. By order of Katyusha, the Pravda Marines Club is established."
+ SOV_navalinf_dev:0 "Pravda Marines Club Development Program"
+ SOV_navalinf_dev_desc:0 "The results from the first few weeks of the Marine Club remains lacklustre to General Secretary Katyusha's expectations. A new set of reforms, expansion in the staff of training instructors, equipment, and more are done to improve the Marines Club further."
+ SOV_radio_effort:0 "Radio Effort"
+ SOV_radio_effort_desc:0 "Current efforts for Radio Research and Development are not enough, especially with the St. Gloriana managing to develop an advanced radio system that can detect coming aircraft. By General Secretary Katyusha's orders, the RR&D musst have its funding increased in addition of expanding their staff roster."
+ SOV_army_confidence:0 "Army Confidence"
+ SOV_army_confidence_desc:0 "General Secretary Katyusha is impressed with the new improvements done for the Pravda Army Club, but more can be done to improve the morale and confidence of the each student in the Club."
+ SOV_training_maintenance:0 "Maintenance Training"
+ SOV_training_maintenance_desc:0 "While the Pravda Mechanics Club worked hard to make sure the vehicles of Pravda are well maintained and guaranteed to not break down during deployment, it would be beneficial for the drivers and the rest of the crew themselves to have the same training whenever their vehicles breakdown on the front lines."
+ SOV_fighter_adventurers:0 "Fighter Adventuring Spirit"
+ SOV_fighter_adventurers_desc:0 "Amongst all the Schools in the Federation, Pravda is known for the adventurous spirit of their pilots. This is realized during training, but more training must be done to prepare them for active combat."
+ SOV_aviation_manufacturing:0 "Pravda Aviation Manufacturing Industry"
+ SOV_aviation_manufacturing_desc:0 "More investments must be made to bolster the number of School-owned Industrial Complexes to produce more planesin addition of newer techniques and technology to improve the planes of the Pravda Air Club."
+ SOV_standard_maintenance:0 "Standard Maintenance Crews"
+ SOV_standard_maintenance_desc:0 "As planes become larger as time goes on, the Mechanics Club of Pravda becomes no longer sufficient enough to handle medium and large aircraft. To stop this program, General Secretary Katyusha orders for the formation of the Aircraft Mechanics Club. This would ensure that Pravda can reach a new standard for aircraft maintenance."
+ SOV_expanded_program:0 "Expanded Airforce Program"
+ SOV_expanded_program_desc:0 "With the Pravda Air Club being relatively a new club, there are lest personnel belonging to it compared to the Tankery and Navy Club. To fix this, General Secretary Katyusha announces further expansions in the program to include more benefits for new students entering the club."
+ SOV_unground_airforce:0 "Pravda's Underground Airforce"
+ SOV_unground_airforce_desc:0 "With the potential of bombers known in Pravda, it becomes clear that enemy schools may attempt to bomb the school's airfields to render any air capabilities moot. To avoid making the Pravda Air Club inactive, underground air facilities are ordered to be constructed by General Secretary Katyusha."
+ SOV_heavy_manufacturing:0 "Heavy Aircraft Manufacturing"
+ SOV_heavy_manufacturing_desc:0 "With the production of planes becoming more common, with varying sizes for their different purposes, it comes to the point that Pravda needs to catch up with the industrial giants of the West in this specific field. By the orders of General Secretary Katyusha, the Heavy Aircraft Manufacturing sector will receive a wider boost of industrial complexes and budgets to increase their plane production."
+ SOV_auxilary_development:0 "Auxilary Development"
+ SOV_auxilary_development_desc:0 "It has become increasingly clear that Pravda is behind in Air-related Research and Development compared to the Western Schools. Even reports from agents in Kuromorimine have reported their own advancements in this field outstrips the current roster of planes in Pravda. The General Secretary will not allow this to continue, and therefore ordered the expansion of Research and Development Teams to develop better technologies for Pravda Aircraft."
+ SOV_modern_airforce:0 "Modern Airforce"
+ SOV_modern_airforce_desc:0 "Pravda has finally caught up with a modern airforce of their own, becoming part of the Great Powers of Air."
+ SOV_underfunded_navy:0 "Underfunded Navy"
+ SOV_underfunded_navy_desc:0 "The Pravda Navy Club has often been neglected in Pravda in favour of the Army and Air Clubs, this is clearly a mistake as the Baltic and the Black Sea would only remain in enemy hands if nothing is done."
+ SOV_naval_buildup:0 "Naval Build-up"
+ SOV_naval_buildup_desc:0 "Seeing the poor state that the Navy Club was in, General Secretary Katyusha orders more funding to be allocated to allow the Navy to recover."
+ SOV_lcruiser_priority:0 "Light Cruiser Priority"
+ SOV_lcruiser_priority_desc:0 "Light Cruisers are cheaper than the other alternatives, in addition to the fact that Pravda will be stuck to the smaller seas than entire oceans."
+ SOV_battleship_priority:0 "Battleship Priority"
+ SOV_battleship_priority_desc:0 "Battleships in the navy are what seperates a Great Power from a Minor Power, it is clear that Pravda requires more production of battleships to show that Pravda Rules the Seas."
+ SOV_carrier_priority:0 "Carrier Priority"
+ SOV_carrier_priority_desc:0 "Carriers are an experimental technology that many in the naval world scoffs at in favour of battleships. This doesn't mean Katyusha is one of them however. Seeing it as a way to bolster industrial production through aircraft, the General Seccretry has ordered a Carrier Priority Policy to extend Pravda's Naval power with Air Power."
+ SOV_mandatory_regiments:0 "Mandatory Regiments"
+ SOV_mandatory_regiments_desc:0 "Currently, there are no official marine regiments in the Navy. This must be changed through mandatory recruitmnts for students familiar with swiming to form the first Pravda Marine Regiments with proper training and equipment for amphibious invasions."
+ SOV_grand_navy:0 "The Grand Navy"
+ SOV_grand_navy_desc:0 "The Navy Club has grown considerably since the beginning of the recent sets of reforms as ordered by General Secretary Katyusha. However, that does not mean that the Navy has finished evolving, and will continue developing into The Grand Navy of Pravda."
  
  SOV_annex_tannu_tuva:0 "Annex Tannu Tuva"
  SOV_annex_tannu_tuva_desc:0 "While it hardly matters economically, for political reasons we should formally annex the People's Republic of Tannu Tuva as an autonomous oblast within the Pravda Union."
