SCH, SMO, SIM Tag Updates

--- a/maddenist stuffs/localisation/english/ssr_l_english.yml
+++ b/maddenist stuffs/localisation/english/ssr_l_english.yml
@@ -351,17 +351,17 @@
  SOV_indochina_united:0 "Union of Indochinese Socialist Republics"
  SOV_indochina_united_DEF:0 "the Union of Indochinese Socialist Republics"
  
- SCH:0 "Buddhist Socialist Capitalist Indian Nazi-American Confederate State of Half Mexican Half Chinese People"
- SCH_DEF:0 "the Buddhist Socialist Capitalist Indian Nazi-American Confederate State of Half Mexican Half Chinese People"
- SCH_mao:0 "People's Republic of China"
- SCH_mao_DEF:0 "the People's Republic of China"
- SCH_ming:0 "Chinese Soviet Socialist Republic"
- SCH_ming_DEF:0 "the Chinese Soviet Socialist Republic"
- SCH_ADJ:0 "Chinese"
+ SCH:0 "Communist Zhongguo"
+ SCH_DEF:0 "the Communist Zhongguo"
+ SCH_mao:0 "Student's Republic of Zhungguo"
+ SCH_mao_DEF:0 "the Student's Republic of Zhungguo"
+ SCH_ming:0 "Zhungguo Pravdaite Republic"
+ SCH_ming_DEF:0 "the Zhungguo Pravdaite Republic"
+ SCH_ADJ:0 "Zhungguonese"
 
- SIM:0 "Inner Mongolian Peoples Republic"
- SIM_DEF:0 "the Inner Mongolian Peoples Republic"
- SIM_ADJ:0 "Inner Mongolian"
+ SIM:0 "Inner Morin Khuurite Students Republic"
+ SIM_DEF:0 "the Inner Morin Khuurite Students Republic"
+ SIM_ADJ:0 "Inner Morin Khuurite"
  
  SFG:0 "Democratic Republic of Afghanistan"
  SFG_DEF:0 "the Democratic Republic of Afghanistan"
@@ -371,9 +371,9 @@
  SET_DEF:0 "the Second Republic of East Turkestan"
  SET_ADJ:0 "East Turkic"
  
- SMO:0 "Mongolian People's Republic"
- SMO_DEF:0 "the Mongolian People's Republic"
- SMO_ADJ:0 "Mongolian"
+ SMO:0 "Morin Khuurite Student's Republic"
+ SMO_DEF:0 "the Morin Khuurite Student's Republic"
+ SMO_ADJ:0 "Morin Khuurite"
  
  SPE:0 "Tudeh Iran"
  SPE_DEF:0 "Tudeh Iran"
