--- a/maddenist stuffs/localisation/english/ssr_l_english.yml
+++ b/maddenist stuffs/localisation/english/ssr_l_english.yml
@@ -157,14 +157,14 @@
  SNT_communism:0 "Dutch People's Republic"
  SNT_communism_DEF:0 "the Dutch People's Republic"
  
- SIT_fascism:0 "Italy"
- SIT_fascism_DEF:0 "Italy"
- SIT_democratic:0 "Republican Italy"
- SIT_democratic_DEF:0 "Republican Italy"
- SIT_neutrality:0 "Kingdom of Italy"
- SIT_neutrality_DEF:0 "the Kingdom of Italy"
- SIT_communism:0 "Italian People's Republic"
- SIT_communism_DEF:0 "the Italian People's Republic"
+ SIT_fascism:0 "Anzio High School"
+ SIT_fascism_DEF:0 "the Anzio High School"
+ SIT_democratic:0 "Republic of Anzio"
+ SIT_democratic_DEF:0 "the Republic of Anzio"
+ SIT_neutrality:0 "The Royal School of Anzio"
+ SIT_neutrality_DEF:0 "the Royal School of Anzio"
+ SIT_communism:0 "Anzio Student's High School"
+ SIT_communism_DEF:0 "the Anzio Student's High School"
  
  SBG_fascism:0 "Rexist Belgium"
  SBG_fascism_DEF:0 "Rexist Belgium"
@@ -256,14 +256,14 @@
  SWL_communism:0 "Welsh Soviet Socialist Republic"
  SWL_communism_DEF:0 "the Welsh Soviet Socialist Republic"
  
- SSP_fascism:0 "Nationalist Spain"
- SSP_fascism_DEF:0 "Nationalist Spain"
- SSP_democratic:0 "Spain"
- SSP_democratic_DEF:0 "Spain"
- SSP_neutrality:0 "Spanish Empire"
- SSP_neutrality_DEF:0 "the Spanish Empire"
- SSP_communism:0 "Republic of Spain"
- SSP_communism_DEF:0 "Republic of Spain"
+ SSP_fascism:0 "Blue Division"
+ SSP_fascism_DEF:0 "the Blue Division"
+ SSP_democratic:0 "Purple Division"
+ SSP_democratic_DEF:0 "the Purple Division"
+ SSP_neutrality:0 "The Royal School of Blue Division"
+ SSP_neutrality_DEF:0 "the Royal School of Blue Division"
+ SSP_communism:0 "Red Division"
+ SSP_communism_DEF:0 "the Red Division"
  
  STR_fascism:1 "Turkish Empire"
  STR_fascism_DEF:1 "the Turkish Empire"
