--- a/maddenist stuffs/localisation/english/countries_l_english.yml
+++ b/maddenist stuffs/localisation/english/countries_l_english.yml
@@ -3168,19 +3168,19 @@
  ADU_ADJ:0 "Andalusian"
  BAY_fascism:1 "Groß-Bayern"
  BAY_fascism_DEF:1 "Groß-Bayern"
- BAY_democratic:1 "Bavarian Free State"
- BAY_democratic_DEF:1 "the Bavarian Free State"
- BAY_neutrality:0 "Kingdom of Bavaria"
- BAY_neutrality_DEF:0 "the Kingdom of Bavaria"
- BAY_communism:1 "Bavarian Soviet Republic"
- BAY_communism_DEF:1 "the Bavarian Soviet Republic"
+ BAY_democratic:1 "Brezel Free State"
+ BAY_democratic_DEF:1 "the BrezelFree State"
+ BAY_neutrality:0 "Kingdom of Brezel"
+ BAY_neutrality_DEF:0 "the Kingdom of Brezeů"
+ BAY_communism:1 "Brezel Soviet Republic"
+ BAY_communism_DEF:1 "the Brezel Soviet Republic"
  BAY_fascism_ADJ:0 "Bavarian"
  BAY_democratic_ADJ:0 "Bavarian"
  BAY_neutrality_ADJ:0 "Bavarian"
  BAY_communism_ADJ:0 "Bavarian"
- BAY:0 "Bavaria"
- BAY_DEF:0 "Bavaria"
- BAY_ADJ:0 "Bavarian"
+ BAY:0 "Brezel"
+ BAY_DEF:0 "Brezel"
+ BAY_ADJ:0 "Brezel"
  MEK_fascism:1 "Groß-Mecklenburg"
  MEK_fascism_DEF:1 "Groß-Mecklenburg"
  MEK_democratic:1 "Free State of Mecklenburg"
