--- a/maddenist stuffs/localisation/english/ssr_decisions_l_english.yml
+++ b/maddenist stuffs/localisation/english/ssr_decisions_l_english.yml
@@ -52,7 +52,7 @@
  SOV_ssrplus_switzerland:0 "Establish §YUnited Cantons§!"
  SOV_ssrplus_britain:0 "The Fate of the §YBritish Isles§!"
  SOV_ssrplus_ireland:0 "Establish §YIrish People's Union§!"
- SOV_ssrplus_spain:0 "Establish §YRepublican Spain§!"
+ SOV_ssrplus_spain:0 "Establish §YIberia§!"
  SOV_ssrplus_portugal:0 "Establish §YMaximalist Portugal§!"
  
  SOV_ssrplus_turkey:0 "Establish §YTurkish Socialist Republic§!"
