--- a/maddenist stuffs/localisation/english/pravda_focus_l_english.yml
+++ b/maddenist stuffs/localisation/english/pravda_focus_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  WHILE_FOCUSING:0 "While focusing on this, there will be the following effects:\n$EFF$"
  soviet_focus:0 "Pravda National Focus"
  SOV_complete_5_year:0 "Complete the 5 Year Plan!"
