Saunders Focus Localisation Patch 1

--- a/maddenist stuffs/localisation/english/saunders_focus_l_english.yml
+++ b/maddenist stuffs/localisation/english/saunders_focus_l_english.yml
@@ -55,3 +55,22 @@ continue_the_megumin_doctrine:0 "Continue the Megumin Doctrine"
 continue_the_megumin_doctrine_desc:0 "Having been done under the administration of the former Student Council President and former Saunders Tankery club Commander Megumi "Megumin", it priotizes the protection and independence of North and South American regions from imperialism."
 a_meeting_with_darjeeling:0 "A Meeting with Darjeeling"
 a_meeting_with_darjeeling_desc:0 "It would be a shame to utilize Kay's good relations with Tank Commander Darjeeling of the St. Glorianna Tankery Club, but it is necessary in order for Saunders to be aware of activities that may jeopardise Saunder's Foreign Affairs Plans."
+
+#New Update
+
+closing_off_the_school_system:0 "Closing Off the School System"
+closing_off_the_school_system_desc:0 "It is obvious that the economic downturn of Saunders is caused by a case of there being too many students participating in Saunders. Finding this issue, the Student Council deems it proper to curb such problem before it worsens."
+the_purity_of_senshado_traditions:0 "The Purity of Sensha-do Traditions"
+the_purity_of_senshado_traditions_desc:0 "The possibilities of the traditions of Sensha-do being twisted and warped by these..interlopers is highly likely. New laws and persuasions shall be made to encourage keeping Sensha-do unchanged."
+greater_restrictions_on_mixed_schools:0 "Greater Restrictions on Mixed Schools"
+greater_restrictions_on_mixed_schools_desc:0 "A similar problem to the question of purity of Sensha-do, there shall be grand efforts proposed by the Student Council to reduce the number of mixed schools to encourage recruitments of students in the more standard ones."
+isolate_the_saunders_social_mobility_fields:0 "Isolate the Saunders Social Mobility Fields"
+isolate_the_saunders_social_mobility_fields_desc:0 "It is from the students being able to ascend or descen the social mobility ladder that caused uneeded instability. Curbing this to encourage a more rigid and stable structure shall bring order to Saunders."
+opening_up_the_school_system:0 "Opening Up the School System"
+opening_up_the_school_system_desc:0 "Every year, new students arrive to join the Sauncers School Districts from coast to coast - however only a handful remains to be considered as part of Saunders. Kay in contrast sees a greater potential in bringing many students together to participate in the Saunders Experiment - a key for the school to overcome other schools."
+boy_schools_representative_structure_act:0 "The Boy Schools Representative Structure Act"
+boy_schools_representative_structure_act_desc:0 "Despite there being learning institutions that primarily pans towards boys, they are not part of the larger education entity of Saunders. Kay seeks to bring them into the fold to expand the resources avaliable to the Saunders School Districts."
+participation_of_mixed_schools_in_saunders_act:0 "The Participation of Mixed Schools in Saunders Act"
+participation_of_mixed_schools_in_saunders_act_desc:0 "After bringing fully bringing in the boy schools into Saunders, the next on the plan is to bring the mixed schools into the fold."
+reform_the_saunders_foreign_exchange_and_student_moving_system:0 "Reforms on the Saunders Foreign Exchange and Student Moving System"
+reform_the_saunders_foreign_exchange_and_student_moving_system_desc:0 "With the expansion of the Saunders School Systems done through the previous tasks, with an expansion into the education budget, an issue still persists. New reforms shall be conducted to streamline and strengthen the current foreign exchange processes while easing the ways where students in the wider Saunders to move from one school to another."
