Most of Saunders Air done

--- a/maddenist stuffs/localisation/english/saunders_focus_l_english.yml
+++ b/maddenist stuffs/localisation/english/saunders_focus_l_english.yml
@@ -74,3 +74,6 @@ participation_of_mixed_schools_in_saunders_act:0 "The Participation of Mixed Sch
 participation_of_mixed_schools_in_saunders_act_desc:0 "After bringing fully bringing in the boy schools into Saunders, the next on the plan is to bring the mixed schools into the fold."
 reform_the_saunders_foreign_exchange_and_student_moving_system:0 "Reforms on the Saunders Foreign Exchange and Student Moving System"
 reform_the_saunders_foreign_exchange_and_student_moving_system_desc:0 "With the expansion of the Saunders School Systems done through the previous tasks, with an expansion into the education budget, an issue still persists. New reforms shall be conducted to streamline and strengthen the current foreign exchange processes while easing the ways where students in the wider Saunders to move from one school to another."
+USA_airframe_choice_tt:0 "The Research Bonus on this focus is determined on your reform"
+
+#Military
